--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,7 +57,11 @@ en:
       template: 'Recommended Filter'
       edit_template: 'Edit Recommended Filter'
       new_template: 'New Recommended Filter'
-
+      download_to_mobile: 'Download to mobile'
+      download_to_pc: 'Download to pc'
+      download_to: 'Download to'
+      mobile: 'mobile'
+      pc: 'pc'
 
     content-type:
       all: 'Any'
