--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -53,6 +53,11 @@ ru:
       template: 'Рекомендуемые Фильтры'
       edit_template: 'Редактировать рекомендуемый фильтр'
       new_template: 'Создать рекомендуемый фильтр'
+      download_to_mobile: 'Download to mobile'
+      download_to_pc: 'Download to pc'
+      download_to: 'Download to:'
+      mobile: 'mobile'
+      pc: 'pc'
 
     content-type:
       all: 'Всё'
